--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ dist/
 .DS_Store
 *.pem
 
+# SSL Certificates (locally generated)
+frontend/certificates/
+certificates/
+
 # Debug
 npm-debug.log*
 yarn-debug.log*
@@ -53,3 +57,23 @@ ENV/
 # CDK
 infra/cdk.out/
 infra/node_modules/
+
+# Terraform
+infra/terraform/.terraform/
+infra/terraform/.terraform.lock.hcl
+infra/terraform/terraform.tfstate
+infra/terraform/terraform.tfstate.backup
+infra/terraform/*.tfvars
+infra/terraform/.terraform.tfstate.lock.info
+
+# Lambda deployment packages
+backend/functions/**/*.zip
+backend/functions/**/node_modules/
+
+# Frontend build
+frontend/out/
+frontend/.env.production
+frontend/.env.local
+
+# Deployment scripts
+scripts/invalidate-cloudfront.sh
